--- a/src/options.html
+++ b/src/options.html
@@ -128,21 +128,9 @@
             .save-section {
                 display: flex;
                 justify-content: flex-end;
+                align-items: center;
                 gap: 0.75rem;
                 margin-top: 1.5rem;
-            }
-            .save-btn {
-                background: #4299e1;
-                color: white;
-                border: none;
-                padding: 0.625rem 1.5rem;
-                border-radius: 0.375rem;
-                font-size: 0.875rem;
-                font-weight: 500;
-                cursor: pointer;
-            }
-            .save-btn:hover {
-                background: #3182ce;
             }
             .reset-btn {
                 background: #e2e8f0;
@@ -157,24 +145,22 @@
             .reset-btn:hover {
                 background: #cbd5e0;
             }
-            .toast {
-                position: fixed;
-                bottom: 1.5rem;
-                right: 1.5rem;
-                background: #48bb78;
-                color: white;
-                padding: 0.75rem 1.5rem;
-                border-radius: 0.375rem;
-                box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
+            .saved-indicator {
+                display: flex;
+                align-items: center;
+                gap: 0.375rem;
+                color: #38a169;
+                font-size: 0.875rem;
+                font-weight: 500;
                 opacity: 0;
-                transform: translateY(0.625rem);
-                transition:
-                    opacity 0.2s,
-                    transform 0.2s;
+                transition: opacity 0.2s;
             }
-            .toast.show {
+            .saved-indicator.show {
                 opacity: 1;
-                transform: translateY(0);
+            }
+            .saved-indicator svg {
+                width: 1rem;
+                height: 1rem;
             }
         </style>
     </head>
@@ -193,21 +179,6 @@
                             <div class="label-title">Run in Private Mode</div>
                             <div class="label-hint">
                                 Open search results in private/incognito windows
-                            </div>
-                        </div>
-                    </label>
-                </div>
-
-                <div class="form-group">
-                    <label>
-                        <input type="checkbox" id="autoClose" />
-                        <div class="label-content">
-                            <div class="label-title">
-                                Auto-close Window on Success
-                            </div>
-                            <div class="label-hint">
-                                Automatically close the search window after
-                                content is extracted
                             </div>
                         </div>
                     </label>
@@ -251,49 +222,33 @@
                     <label>
                         <input
                             type="number"
-                            id="extractTimeout"
-                            min="5"
-                            max="60"
+                            id="extractDelay"
+                            min="1000"
+                            max="10000"
+                            step="500"
                         />
                         <div class="label-content">
-                            <div class="label-title">
-                                Extraction Timeout (seconds)
-                            </div>
+                            <div class="label-title">Extract Delay (ms)</div>
                             <div class="label-hint">
-                                Time before auto-submitting results
+                                Time to wait for page to load before extracting
                             </div>
                         </div>
                     </label>
                 </div>
             </div>
 
-            <div class="form-group">
-                <label>
-                    <input
-                        type="number"
-                        id="extractDelay"
-                        min="1000"
-                        max="10000"
-                        step="500"
-                    />
-                    <div class="label-content">
-                        <div class="label-title">Extract Delay (ms)</div>
-                        <div class="label-hint">
-                            Time to wait for page to load before extracting
-                        </div>
-                    </div>
-                </label>
-            </div>
-
             <div class="save-section">
+                <span class="saved-indicator" id="savedIndicator">
+                    <svg viewBox="0 0 20 20" fill="currentColor">
+                        <path fill-rule="evenodd" d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z" clip-rule="evenodd" />
+                    </svg>
+                    Saved
+                </span>
                 <button class="reset-btn" id="resetBtn">
                     Reset to Defaults
                 </button>
-                <button class="save-btn" id="saveBtn">Save Settings</button>
             </div>
         </div>
-
-        <div class="toast" id="toast">Settings saved!</div>
 
         <script src="config.js"></script>
         <script src="options.js"></script>
